feat: instalando lib de icones e ajustes componentes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
